manifests/mailapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailapp
  labels:
    app: mailapp
spec:
  type: ClusterIP
  selector:
    app: mailapp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
